--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-near-sdk = "4.0.0-pre.4"
+near-sdk = "3.1.0"
+# near-sdk = "4.0.0-pre.4"
 
 [profile.release]
 codegen-units = 1
