--- a/Contract/Cargo.toml
+++ b/Contract/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rust-template"
+name = "bchain-business-card"
 version = "0.1.0"
-authors = ["Near Inc <hello@near.org>"]
+authors = ["@juemrami <juemrami@gmail.com>"]
 edition = "2018"
 
 [lib]
