Navbar done af.
swapped to windi to try out attributify but it doesnt seem to work with next.js

--- a/next_frontend/tsconfig.json
+++ b/next_frontend/tsconfig.json
@@ -22,7 +22,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "src/pages/Homepage.jsx"  ],
+    "**/*.tsx", "src/pages/Homepage.jsx", "src/pages/index.jsx"  ],
   "exclude": [
     "node_modules"
   ]
