--- a/next_frontend/package.json
+++ b/next_frontend/package.json
@@ -10,30 +10,20 @@
   "dependencies": {
     "babel": "^6.23.0",
     "big.js": "^6.1.1",
-    "buffer": "^6.0.3",
     "near-api-js": "^0.44.2",
     "next": "12.0.9",
     "next-google-fonts": "^2.2.0",
-    "next-redux-wrapper": "^7.0.5",
-    "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.0",
-    "react-spinners": "^0.11.0",
-    "react-toastify": "^8.1.0",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "tailwindcss": "^3.0.16",
-    "web-vitals": "^2.1.4",
-    "autoprefixer": "^10.4.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6"
+    "react-spinners": "^0.11.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "windicss-webpack-plugin": "^1.6.2"
   }
 }
