--- a/next_frontend/tsconfig.json
+++ b/next_frontend/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node", "connect"],
     "target": "es2018",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -21,9 +19,10 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx", "src/pages/Homepage.jsx", "src/pages/index.jsx"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "*/*.ts",
+    "**/*.tsx",
+    "src/pages/Homepage.jsx",
+    "src/pages/index.jsx"
+  ],
+  "exclude": ["node_modules"]
 }
