--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "5.0.0",
-    "react-spinners": "^0.11.0"
+    "react-loading-icons": "^1.0.8"
   },
   "devDependencies": {
     "@types/node": "^17.0.13",
