--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-loading-icons": "^1.0.8"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "eslint": "8.8.0",
