--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "next": "12.0.9",
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-loading-icons": "^1.0.8"
   },
   "devDependencies": {
