--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fix-lints": "standardx src/**/*.ts src/**/*.tsx --fix"
   },
   "dependencies": {
     "big.js": "^6.1.1",
@@ -17,12 +18,20 @@
     "react-loading-icons": "^1.0.8"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.10",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "@typescript-eslint/plugin": "^5.11.0",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9",
+    "eslint-config-next": "^12.0.9",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "windicss-webpack-plugin": "^1.6.2"
   }
 }
